...
        case .confirm: .verify
        }
    }

    var buttonTitle: String? {
        switch action {
        case .check: "Continue"
        case .signIn: "Sign in"
        case .create: "Create account"
        case .sendReset: "Email me a link"
        case .backToSignIn: "Back to sign in"
        case .verify: "Confirm"
        case nil: nil
...
